--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.24"
-  }
+    "eslint-config-next": "14.2.24",
+    "@types/bun": "latest"
+  },
+  "module": "index.ts",
+  "type": "module"
 }
