--- a/package.json
+++ b/package.json
@@ -6,24 +6,57 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@next/mdx": "^14.2.5",
+    "@next/third-parties": "^14.1.3",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@tabler/icons-react": "^3.12.0",
+    "@tailwindcss/typography": "^0.5.14",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/og": "^0.6.2",
+    "@vercel/speed-insights": "^1.0.12",
+    "clsx": "^2.1.1",
+    "disqus-react": "^1.1.5",
+    "firebase": "^10.6.0",
+    "framer-motion": "^11.3.28",
+    "jsdom": "^25.0.0",
+    "next": "14.2.5",
+    "pdfjs-dist": "^4.10.38",
+    "prismjs": "^1.29.0",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.24"
+    "react-pdf": "^9.2.1",
+    "react-viewer": "^3.2.2",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-gfm": "^4.0.1",
+    "rss": "^1.2.2",
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
+    "@types/rss": "^0.0.32",
     "eslint": "^8",
-    "eslint-config-next": "14.2.24",
-    "@types/bun": "latest"
-  },
-  "module": "index.ts",
-  "type": "module"
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
