--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.9.0",
