--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mdx-js/loader": "^3.0.1",
     "@next/mdx": "^14.2.5",
     "@next/third-parties": "^14.1.3",
+    "@notionhq/client": "^2.3.0",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@tabler/icons-react": "^3.12.0",
     "@tailwindcss/typography": "^0.5.14",
+    "@tanstack/react-query": "^5.71.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/og": "^0.6.2",
     "@vercel/speed-insights": "^1.0.12",
@@ -35,6 +37,8 @@
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-notion": "^0.10.0",
+    "react-notion-x": "^7.3.0",
     "react-pdf": "^9.2.1",
     "react-viewer": "^3.2.2",
     "rehype-pretty-code": "^0.14.0",
