--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^3.12.0",
     "@tailwindcss/typography": "^0.5.14",
     "@tanstack/react-query": "^5.71.1",
+    "@tanstack/react-query-devtools": "^5.71.10",
     "@vercel/analytics": "^1.3.1",
     "@vercel/og": "^0.6.2",
     "@vercel/speed-insights": "^1.0.12",
