--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@radix-ui/react-hover-card": "^1.1.1",
     "@tabler/icons-react": "^3.12.0",
     "@tailwindcss/typography": "^0.5.14",
-    "@tanstack/react-query": "^5.71.1",
+    "@tanstack/query-core": "^5.71.10",
+    "@tanstack/query-persist-client-core": "^5.71.10",
+    "@tanstack/query-sync-storage-persister": "^5.71.10",
+    "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
+    "@tanstack/react-query-persist-client": "^5.71.10",
     "@vercel/analytics": "^1.3.1",
     "@vercel/og": "^0.6.2",
     "@vercel/speed-insights": "^1.0.12",
